import {render} from '@testing-library/react'
import React, {ComponentProps} from 'react'
import {fromJS} from 'immutable'

import {StoreDispatch} from 'state/types'
import {WidgetContextType} from 'state/widgets/types'

import {InfobarWidgetsEditionTools} from '../InfobarWidgetsEditionTools'

const commonProps: ComponentProps<typeof InfobarWidgetsEditionTools> = {
    widgets: fromJS({
        _internal: {
            isDirty: false,
            loading: {
                saving: false,
            },
        },
    }),
    dispatch: jest.fn() as StoreDispatch,
    context: WidgetContextType.Ticket,
}

describe('InfobarWidgetsEditionTools component', () => {
    it('should render widgets edition tools disabled because the widgets are not dirty', () => {
        const {container} = render(
            <InfobarWidgetsEditionTools {...commonProps} />
        )

        expect(container.firstChild).toMatchSnapshot()
    })

    it('should render widgets edition tools loading and disabled, because the widgets are being saved', () => {
        const {container} = render(
            <InfobarWidgetsEditionTools
                {...commonProps}
                widgets={fromJS({
                    _internal: {
                        isDirty: true,
                        loading: {
                            saving: true,
                        },
                    },
                })}
            />
        )

        expect(container.firstChild).toMatchSnapshot()
    })

    it('should render widgets edition tools enabled because the widgets are dirty and not being saved', () => {
        const {container} = render(
            <InfobarWidgetsEditionTools
                {...commonProps}
                widgets={fromJS({
                    _internal: {
                        isDirty: true,
                        loading: {
                            saving: false,
                        },
                    },
                })}
            />
        )

        expect(container.firstChild).toMatchSnapshot()
    })
})
